--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
 }
 @font-face{
 	font-family: balsamiqsans-regular;
-	src:url("../fonts/balsamiqsans-regular.ttf");
+	src:url("./fonts/balsamiqsans-regular.ttf");
 }
 body{
 	background: var(--fourth);
