--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body{
 	background: var(--fourth);
 	margin: 0px;
 	width: 100%;
+	font-family:sans-serif;
 	font-family: balsamiqsans-regular;
 }
 .row{
